[package]
name = "trss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = { version = "2.0", features = ["with-serde", "atom"] }
reqwest = { version = "0.11", features = ["blocking"] }
atom_syndication = "0.12"
tui = "0.19"
crossterm = "0.26"
