[package]
name = "trss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = { version = "2.0", features = ["with-serde", "atom"] }
reqwest = { version = "0.11", features = ["blocking"] }
atom_syndication = "0.12"
ratatui = "0.21"
crossterm = "0.26"
html2md = "0.2"
termimad = "0.23"
ansi-to-tui = "3"
html2text = "0.5"
confy = "0.5.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"